--- a/css/style.css
+++ b/css/style.css
@@ -706,6 +706,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   position: relative;
   overflow: hidden;
   margin-bottom: 30px;
+  height: 350px;
 }
 
 #speakers .speaker .details {
